--- a/src/components/Card/styles.scss
+++ b/src/components/Card/styles.scss
@@ -32,6 +32,11 @@
       color: var(--cyan-10);
     }
 
+    .divider {
+      height: fit-content;
+      width: 100%;
+    }
+
     .dice {
       display: flex;
       align-items: center;
